--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 :root {
     --dark-bg: #36393f;
@@ -9,7 +9,7 @@
     --green: #43b581;
     --dark-primary: #2f3136;
     --text-gray: #dcddde;
-    --user-box: #292B2F;
+    --user-box: #292b2f;
     --iconColor: #b9bbbe;
     --red: #dd4444;
 }
@@ -18,19 +18,18 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--dark-bg);
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
 }
 
 .rootDiv {
     display: grid;
-    grid-template-columns: 0px 70px 300px;
+    grid-template-columns: 70px 240px auto 300px;
     grid-template-rows: auto;
 }
 
 .servers {
     grid-column-start: 1;
-    grid-column-end: 2;
     grid-row-start: row1-start;
     grid-row-end: 3;
     position: absolute;
@@ -45,14 +44,15 @@ body {
     user-select: none;
 }
 
-.servers::-webkit-scrollbar, .nav::-webkit-scrollbar {
+.servers::-webkit-scrollbar,
+.nav::-webkit-scrollbar {
     width: 0px;
 }
 
 .homebutton {
     position: relative;
     background-color: var(--dark-bg);
-    color: #FFFFFF;
+    color: #ffffff;
     border-radius: 50%;
     text-align: center;
     height: 48px;
@@ -68,7 +68,7 @@ body {
 .server {
     position: relative;
     background-color: var(--dark-bg);
-    color: #FFFFFF;
+    color: #ffffff;
     border-radius: 50%;
     text-align: center;
     height: 48px;
@@ -96,11 +96,12 @@ body {
 }
 
 .invite:hover {
-    color: #FFFFFF !important;
+    color: #ffffff !important;
     background-color: var(--green) !important;
 }
 
-.server-active, .server:hover {
+.server-active,
+.server:hover {
     background-color: var(--blurple);
     border-radius: 30%;
     transition: 0.3s;
@@ -127,12 +128,12 @@ body {
 }
 
 .side-bar {
-    grid-column: 3 / span 1;
+    grid-column: 2;
     grid-row-start: 1;
     grid-row-end: 1;
     position: relative;
-    float:right;
-    width: 80%;
+    float: right;
+    width: 100%;
     height: 100vh;
     background-color: var(--dark-primary);
 }
@@ -141,23 +142,29 @@ body {
 }
 
 .container {
-    grid-column: 4 / span 2;
+    grid-column: 3;
     position: relative;
-    float:right;
-    width: 80%;
+    float: right;
+    width: 100%;
     height: 100vh;
-    background-color: #37393F;
+    background-color: #37393f;
+    display: flex;
 }
 
+.chatContainer {
+    display: grid;
+    width: 100%;
+}
 
 .chatBox {
     position: absolute;
-    bottom: 0px;
-    width: 550px;
-    height: 44px;
-    left: 0px;
+    bottom: 0;
+    background-color: var(--user-box);
+    width: 100%;
+    height: 53px;
+    margin-bottom: 0;
     display: flex;
-    background: #40444B;
+    background: #40444b;
 }
 
 /* style the form to match the style of the chat box */
@@ -168,7 +175,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
-    background: #40444B;
+    background: #40444b;
     border: none;
     outline: none;
     color: #fff;
@@ -178,16 +185,14 @@ body {
     padding-left: 20px;
 }
 
-.thread {
-    grid-column: 5 / span 1;
-    position: absolute;
-    width: 272px;
-    height: 100vh;
-    left: 998px;
+.threadContainer {
+    grid-column: 4;
+    background: #2e3036;
+    position: relative;
+}
 
-    background: #2E3036;
-    display: flex;
-    justify-content: center;
+.threadTitle {
+    text-align: center;
 }
 
 .navGuildItems {
@@ -264,19 +269,25 @@ body {
     align-items: center;
 }
 
-.mic, .headphone, .settings {
+.mic,
+.headphone,
+.settings {
     padding: 3px;
     user-select: none;
     cursor: pointer;
 }
 
-.mic svg, .headphone svg, .settings svg {
+.mic svg,
+.headphone svg,
+.settings svg {
     height: 20px;
     width: 20px;
     fill: var(--iconColor);
 }
 
-.mic:hover, .headphone:hover, .settings:hover {
+.mic:hover,
+.headphone:hover,
+.settings:hover {
     background-color: var(--dark-bg);
 }
 
